--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,17 +1,18 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="image-responsive">
+        <img [src]="recipe.imagePath" alt={{recipe.imagePath}} class="image-responsive" style="max-height: 200px;">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>{{recipe.name}}</h1>
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
+        <div class="btn-group"
+        appDropdown>
             <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a href="#">Add Ingredient to Shopping List</a></li>
@@ -24,13 +25,15 @@
 
 <div class="row">
     <div class="col-xs-12">
-        Description
+        {{recipe.description}}
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        Ingredients
+       Ingredient
     </div>
 </div>
+
+
 
