--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,10 @@
-<p>recipe item works!</p>
+<a href="#" (click)="onSelected()"
+class="list-group-item clearfix">
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+        <p class="list-group-item-text">{{recipe.description}}</p>
+    </div>
+    <span class="pull-right">
+        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}" class="image-responsive" style="max-height: 50px;">
+    </span>
+</a>
