--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
         appDropdown>
             <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">Add Ingredient to Shopping List</a></li>
+                <li><a (click) = "onAddToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -31,7 +31,10 @@
 
 <div class="row">
     <div class="col-xs-12">
-       Ingredient
+       <ul class="list-group">
+           <li class="list-group-item"
+           *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
+       </ul>
     </div>
 </div>
 
