Added routing to the project

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,8 +16,8 @@
             <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a (click) = "onAddToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li (click)="onEditRecipe()" style="cursor: pointer;"><a >Edit Recipe</a></li>
+                <li style="cursor: pointer;"><a >Delete Recipe</a></li>
             </ul>
         </div>
     </div>
