--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#" (click)="onSelected()"
+<a style="cursor: pointer;"
+routerLinkActive="active"
+[routerLink]="[index]" 
 class="list-group-item clearfix">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
