--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xs12">
-   <button class="btn btn-success">New Recipe</button>
+   <button (click)="onNewRecipe()" class="btn btn-success">New Recipe</button>
   </div>  
 </div>
 <hr>
 <div class="row" >
     <div class="col-xs12">
-       <app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipe-item>
+       <app-recipe-item  *ngFor="let recipeEl of recipes; let i=index;" [index] = "i" [recipe]="recipeEl"></app-recipe-item>
     </div>  
   </div>
 
