--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             <ul class="dropdown-menu">
                 <li><a (click) = "onAddToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
                 <li (click)="onEditRecipe()" style="cursor: pointer;"><a >Edit Recipe</a></li>
-                <li style="cursor: pointer;"><a >Delete Recipe</a></li>
+                <li style="cursor: pointer;" (click)="onDelete()"><a >Delete Recipe</a></li>
             </ul>
         </div>
     </div>
