--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,9 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success">Save</button>
-                    <button type="button" class="btn btn-danger">Cancel</button>
+                    <button type="submit" class="btn btn-success" style="margin-right: 5px;"
+                    [disabled]="!recipeForm.valid">Save</button>
+                    <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
             <div class="row">
@@ -44,19 +45,29 @@
             </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <div class="row">
+                <div class="col-xs-12" formArrayName="ingredients">
+                    <div class="row" *ngFor="let ingredientControl of controls; let i = index" 
+                    [formGroupName]="i"
+                    style="margin-top: 10px;">
                         <div class="col-xs-8">
                     <input type="text"
-                    class="form-control">
+                    class="form-control"
+                    formControlName="name">
                 </div>
                 <div class="col-xs-2">
                  <input type="number"
-                    class="form-control">
+                    class="form-control"
+                    formControlName="amount">
                 </div>
                 <div class="col-xs-2">
                     <button class="btn btn-danger">X</button>
                 </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div type="button" class="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</div>
+                    </div>
                 </div>
             </div>
             </div>
