--- a/src/app/recipes/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.css
@@ -2,6 +2,6 @@ img {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 500px;
-    height: 400px;
+    max-width: 500px;
+    max-height: 400px;
   }
