--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -24,13 +24,14 @@
                         <label for="imagePath">Image URL</label>
                         <input type="text" id="imagePath"
                         formControlName="imagePath"
-                        class="form-control">
+                        class="form-control"
+                        #imagePath>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" class="img-responsive">
+                    <img [src]="imagePath.value" class="img-responsive">
                 </div>
             </div>
             <div class="row">
@@ -49,7 +50,7 @@
                     <div class="row" *ngFor="let ingredientControl of controls; let i = index" 
                     [formGroupName]="i"
                     style="margin-top: 10px;">
-                        <div class="col-xs-8">
+                    <div class="col-xs-8">
                     <input type="text"
                     class="form-control"
                     formControlName="name">
@@ -60,7 +61,8 @@
                     formControlName="amount">
                 </div>
                 <div class="col-xs-2">
-                    <button class="btn btn-danger">X</button>
+                    <button class="btn btn-danger"
+                    (click)="onDeleteIngredient(i)">X</button>
                 </div>
                 </div>
                 <hr>
