--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,11 +2,25 @@
 routerLinkActive="active"
 [routerLink]="[index]" 
 class="list-group-item clearfix">
-    <div class="pull-left">
-        <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-        <p class="list-group-item-text">{{recipe.description}}</p>
+<div class="row">
+    <div class="col-xs-12">
+<div class="row">
+    <div class="col-xs-8">
+        <div class="pull-left">
+            <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+            <p class="list-group-item-text">{{recipe.description}}</p>
+        </div>
     </div>
-    <span class="pull-right">
-        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}" class="image-responsive" style="max-height: 50px;">
+
+
+    
+    <div class="col-xs-4 pull-right">
+    <span >
+        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}"  class="image-responsive pull-right" style="height: 80px; width: 80px;">
     </span>
+</div>
+</div>
+    </div>
+</div>
 </a>
+
