added http data save and fetch method via firebase backend

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,8 @@
                 <li class="dropdown" appDropdown>
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li style="cursor: pointer;"><a >Saving Data</a></li>
-                        <li style="cursor: pointer;"><a >Fetching Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()"> Fetch Data</a></li>
                     </ul>
                 </li>
             
