Nav bar updated

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,20 @@
-<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-expand-lg navbar-default">
 <div class=container-fluid>
-    <div class="navbar-header">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>Hello
+      </button> -->
+     <div class="navbar-header">
         <a routerLink="" class="navbar-brand">Recipe Book</a>
     </div>
-    <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+    <button *ngIf="!collapsed" class="navbar-toggler" type="button" data-toggle="collapse"
+           data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+           aria-expanded="false" aria-label="Toggle navigation"
+           (click)="toggleCollapsed()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}" id="navbarSupportedContent">
+            <ul class="nav navbar-nav me-auto">
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
                 <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
             </ul>
