--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs12">
-   <button (click)="onNewRecipe()" class="btn btn-success">New Recipe</button>
+   <button (click)="onNewRecipe()" class="btn btn-success" id="newRecipe">New Recipe</button>
   </div>  
 </div>
 <hr>
