--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,7 +10,7 @@
                 <input type="email" id="email" class="form-control" ngModel name="email" required email>
             </div>
             <div class="form-group">
-                <label for="password">E-mail</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
             </div>   
                 <div>
