--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,10 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-        <div *ngIf="error" class="alert alert-danger">
+        <!-- <div *ngIf="error" class="alert alert-danger">
             <p>{{error}}</p>
-        </div>
+        </div> -->
+        <!-- <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert> -->
+        <ng-template appPlaceholder></ng-template>
         <div *ngIf="isLoading" style="text-align: center;"><app-loading-spinner></app-loading-spinner></div>
         <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
             <div class="form-group">
