--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-right" id="navbarSupportedContent">
     
                 <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="isAuthenticated">Logout</a></li>
-                <li class="dropdown" appDropdown>
+                <li class="dropdown" appDropdown *ngIf="isAuthenticated">
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data</a></li>
