--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,17 @@
 
 <nav class="navbar navbar-inverse bg-inverse navbar-toggleable-sm fixed-top">
-<div class=container-fluid>
    
+<div class=container-fluid>
+ 
      <div class="navbar-header">
         <a routerLink="" class="navbar-brand">Recipe Book</a>
     </div>
- 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+    <div class="navbar-collapse collapse" id="navbarSupportedContent">
+
+  
             <ul class="nav navbar-nav ">
-                <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes<span class="navbar-toggler-icon"></span></a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes<span class="navbar-togger-icon"></span></a></li>
                 <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
                 <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
             </ul>
@@ -20,8 +23,8 @@
                 <li class="dropdown" appDropdown *ngIf="isAuthenticated">
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data</a></li>
-                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()"> Fetch Data</a></li>
+                        <li><a style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data </a></li>
+                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()"> Fetch Data </a></li>
                     </ul>
                 </li>
             
