fixed boostrap issue with responsive nevigation

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -15,9 +15,9 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
             </div>   
-                <div>
-                
-                    <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLoginMode ? 'Login' : 'Sign Up'}}</button> |
+                <div style="margin-top: 5px;">
+         
+                    <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLoginMode ? 'Login' : 'Sign Up'}}</button><span>&nbsp;</span>
                     <button class="btn btn-primary" type="button" (click)="onSwitchMode()">Switch to {{isLoginMode ? 'Sign Up' : 'Login'}}</button>
                 </div>
          
