--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,60 @@
 
-<nav class="navbar navbar-inverse bg-inverse navbar-toggleable-sm fixed-top">
+<div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
-<div class=container-fluid>
+
  
      <div class="navbar-header">
         <a routerLink="" class="navbar-brand">Recipe Book</a>
     </div>
 
-    <div class="navbar-collapse collapse" id="navbarSupportedContent">
+    <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li routerLinkActive="active" class="nav-item active" *ngIf="isAuthenticated">
+              <a routerLink="/recipes" class="nav-link">Recipes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
+                <a class="nav-link" routerLink="/login">Login</a>
+              </li>
+          </ul>
   
-            <ul class="nav navbar-nav ">
-                <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipes<span class="navbar-togger-icon"></span></a></li>
-                <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
-                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
-            </ul>
+            <!-- <ul class="nnavbar-nav mr-auto mt-2 mt-lg-0">
+                <li routerLinkActive="active" class="nav-item active" *ngIf="isAuthenticated"><a routerLink="/recipes" class="nav-link">Recipes</a></li>
+                <li routerLinkActive="active" class="nav-item"><a routerLink="/shopping-list">Shopping List</a></li>
+                <li routerLinkActive="active" class="nav-item" *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
+            </ul> -->
 
      
-            <ul class="nav navbar-nav navbar-right" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
+                    <a class="nav-link" style="cursor: pointer;" (click)="onLogout()">Logout</a>
+                  </li>
     
-                <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="isAuthenticated">Logout</a></li>
-                <li class="dropdown" appDropdown *ngIf="isAuthenticated">
-                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data </a></li>
-                        <li><a style="cursor: pointer;" (click)="onFetchRecipe()"> Fetch Data </a></li>
+                    <li class="nav-item dropdown" *ngIf="isAuthenticated">
+             
+                    <a class="nav-link dropdown-toggle" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Manage </a>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarScrollingDropdown">
+                        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onSaveRecipe()"> Save Data </a></li>
+                        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onFetchRecipe()"> Fetch Data </a></li>
+                  
                     </ul>
                 </li>
             
             </ul>
         </div>
-</div>
+
 
 </nav>
+<hr style="color: transparent;">
+</div>
+
+
+ 
