--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,16 +11,17 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group"
-        appDropdown>
-            <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+        <div
+        class="dropdown">
+            <button class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
-                <li (click)="onEditRecipe()" style="cursor: pointer;"><a >Edit Recipe</a></li>
-                <li style="cursor: pointer;" (click)="onDelete()"><a >Delete Recipe</a></li>
+                <li class="dropdown-item"><a (click)="onAddToShoppingList()" style="cursor: pointer;">Add Ingredient to Shopping List</a></li>
+                <li class="dropdown-item" (click)="onEditRecipe()" style="cursor: pointer;"><a >Edit Recipe</a></li>
+                <li class="dropdown-item" style="cursor: pointer;" (click)="onDelete()"><a >Delete Recipe</a></li>
             </ul>
         </div>
     </div>
+
 </div>
 
 <div class="row">
@@ -32,7 +33,7 @@
 <div class="row">
     <div class="col-xs-12">
        <ul class="list-group">
-           <li class="list-group-item"
+           <li class="list-group-item list-group-item-action list-group-item-primary"
            *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
        </ul>
     </div>
