--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-10">
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <img [src]="imagePath.value" class="img-responsive">
+                    <img [src]="imagePath.value" class="img-fluid">
                 </div>
             </div>
             <div class="row">
@@ -50,17 +50,17 @@
                     <div class="row" *ngFor="let ingredientControl of controls; let i = index" 
                     [formGroupName]="i"
                     style="margin-top: 10px;">
-                    <div class="col-xs-8">
+                    <div class="col-md-8">
                     <input type="text"
                     class="form-control"
                     formControlName="name">
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                  <input type="number"
                     class="form-control"
                     formControlName="amount">
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2 ms-auto">
                     <button class="btn btn-danger"
                     (click)="onDeleteIngredient(i)">X</button>
                 </div>
