--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,11 +1,12 @@
+<div class="list-group">
 <a style="cursor: pointer;"
 routerLinkActive="active"
 [routerLink]="[index]" 
-class="list-group-item clearfix">
+class="list-group-item list-group-item-action list-group-item-info">
 <div class="row">
-    <div class="col-xs-12">
-<div class="row">
-    <div class="col-xs-8">
+    <!-- <div class="col-xs-12">
+<div class="row"> -->
+    <div class="col-md-10">
         <div class="pull-left">
             <h4 class="list-group-item-heading">{{recipe.name}}</h4>
             <p class="list-group-item-text">{{recipe.description}}</p>
@@ -14,13 +15,13 @@ class="list-group-item clearfix">
 
 
     
-    <div class="col-xs-4 pull-right">
+    <div class="col-md-2 pull-right">
     <span >
-        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}"  class="image-responsive pull-right" style="height: 80px; width: 80px;">
+        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}"  class="img-fluid rounded-end" style="max-height: 500px; max-width: 70px;">
     </span>
 </div>
 </div>
-    </div>
-</div>
+
 </a>
+</div>
 
