--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12" style="margin-top: 5px;">
                     <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update':'Add'}}</button><span>{{' '}}</span>
                     <button class="btn btn-danger" type="button" (click)="onDelete()"
                     *ngIf="editMode">Delete</button><span>{{' '}}</span>
