--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,23 +5,26 @@
 
  
      <div class="navbar-header">
+        
         <a routerLink="" class="navbar-brand">Recipe Book</a>
+       
     </div>
-
+    
+  
     <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
     </button>
-
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li routerLinkActive="active" class="nav-item active" *ngIf="isAuthenticated">
-              <a routerLink="/recipes" class="nav-link">Recipes</a>
+              <a routerLink="/recipes" class="nav-link button">Recipes</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
+              <a class="nav-link button" routerLink="/shopping-list">Shopping List</a>
             </li>
             <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link button"  routerLink="/login">Login</a>
               </li>
           </ul>
   
