--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+<div class="row justify-content-center align-items-center">
+    <div class="col-xs-12 col-sm-10 col-lg-4 col-xl-4">
         <!-- <div *ngIf="error" class="alert alert-danger">
             <p>{{error}}</p>
         </div> -->
@@ -17,8 +17,8 @@
             </div>   
                 <div style="margin-top: 5px;">
          
-                    <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{isLoginMode ? 'Login' : 'Sign Up'}}</button><span>&nbsp;</span>
-                    <button class="btn btn-primary" type="button" (click)="onSwitchMode()">Switch to {{isLoginMode ? 'Sign Up' : 'Login'}}</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!authForm.valid">{{isLoginMode ? 'Login' : 'Sign Up'}}</button><span>&nbsp;</span>
+                    <button class="btn btn-info" type="button" (click)="onSwitchMode()">Switch to {{isLoginMode ? 'Sign Up' : 'Login'}}</button>
                 </div>
          
         </form>
