--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipe.imagePath" alt={{recipe.imagePath}} class="image-responsive">
+        <img [src]="recipe.imagePath" alt={{recipe.imagePath}} class="image-responsive" style="max-height: 20.5em; max-width: 24.5em; min-height: 20.5em; min-width: 24.5em;">
     </div>
 </div>
 <div class="row">
