--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-<div class="col-md-5">
+<div class="col-md-5 order-1">
     <app-recipe-list></app-recipe-list>
 </div>
-<div class="col-md-7">
+<div class="col-md-7 order-2">
     <router-outlet></router-outlet>
 </div>
 </div>
