--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,13 +1,13 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="">
         <form (ngSubmit)="onSubmit(f)" #f="ngForm"> 
             <div class="row">
-                <div class="col-sm-5 form group">
+                <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-8 form group">
                     <label for="name">Name</label>
                     <input ngModel type="text" id="name" class="form-control" name="name" required
                    >
                 </div>
-                <div class="col-sm-2 form-group">
+                <div class=" col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-8 form-group">
                     <label for="amount">Amount</label>
                     <input ngModel type="number" id="amount" class="form-control" name="amount" required
                     pattern="^[1-9]+[0-9]*$"
