angular universal added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 
-<div class="container-fluid">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
 
  
      <div class="navbar-header">
         
-        <a routerLink="" class="navbar-brand">Recipe Book</a>
+        <a routerLink="" class="navbar-brand px-2">Recipe Book</a>
        
     </div>
     
@@ -57,7 +57,7 @@
 
 </nav>
 <hr style="color: transparent;">
-</div>
+
 
 
  
