changed recipes list template

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
@@ -8,3 +8,15 @@
    padding: 1px;
 
 }
+
+.card-img-top {
+    width: 100%;
+    height: 50vw;
+    object-fit: cover;
+}
+
+.card:hover{
+    transform: scale(1.05);
+ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+ background-color: rgb(200, 240, 196);
+}
