--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-<div class="col-md-5 order-1">
-    <app-recipe-list></app-recipe-list>
-</div>
-<div class="col-md-7 order-2">
+<div class="col-sm-12 order-1">
     <router-outlet></router-outlet>
 </div>
+<!-- <div class="col-lg-6 order-2">
+   
+</div> -->
 </div>
 
 
