--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,6 @@
+<div class="row justify-content-center">
+    <div class="col-lg-4">
+<button routerLink="/" class="btn btn-success mb-2">Go Back</button>
 <div class="row">
     <div class="col-xs-12">
         <img [src]="recipe.imagePath" alt={{recipe.imagePath}} class="image-responsive" style="max-height: 20.5em; max-width: 24.5em; min-height: 20.5em; min-width: 24.5em;">
@@ -39,5 +42,6 @@
     </div>
 </div>
 
-
+</div>
+</div>
 
