--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-10">
+<div class="row justify-content-center">
+    <div class="col-lg-4">
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
@@ -66,7 +66,7 @@
                 </div>
                 </div>
                 <hr>
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-xs-12">
                         <div type="button" class="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</div>
                     </div>
