--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,41 +1,9 @@
-<div class="list-group">
-<a 
-routerLinkActive="active"
-[routerLink]="[index]" 
-class="list-group-item list-group-item list-group-item-info" style="cursor: pointer;">
-<!-- <div class="row">
-    <div class="col-xs-12">
-<div class="row"> -->
-    <!-- <div class="col-xs-10 col-md-8 col-lg-8">
-        <div class="pull-left">
-            <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-            <p class="list-group-item-text">{{recipe.description}}</p>
-        </div>
-    </div>
-
-
-    
-    <div class="col-xs-2 col-md-2 col-lg-2 justify-content-end d-xs-none d-sm-none d-md-none d-lg-inline d-xl-inline">
-    <span >
-        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}"  class="img-thumbnail" style="max-height: 4.5em; max-width: 4.5em; min-height: 4.5em; min-width: 4.5em;">
-    </span>
-</div>
-</div> --> 
-
-<div class="card mb-1" style="max-width: 570px;">
-    <div class="row g-0">
-      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 d-none d-sm-inline d-md-inline d-lg-inline d-xs-inline">
-        <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}"  class="img-fluid rounded-start " style="height: 100%; width: 100%; max-height: 150px;">
-      </div>
-      <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-        <div class="card-body">
-          <h5 class="card-title">{{recipe.name}}</h5>
-          <p class="card-text">{{recipe.description}}</p>
-          </div>
+<div routerLinkActive="active"
+    [routerLink]="[index]" class="card h-100" style="cursor: pointer;" >
+      <img [src]="recipe.imagePath" alt="{{recipe.imagePath}}" class="card-img-top" alt="..." style="max-height: 180px;">
+      <div class="card-body">
+        <h5 class="card-title">{{recipe.name}}</h5>
+        <p class="card-text">{{recipe.description}}</p>
       </div>
     </div>
-  </div>
-
-</a>
-</div>
 
